# Worldosv6

./: .gitignore  DOCKER_GUIDE.md  README.md  WORLDOS_V11_MYTHOS_WEAVER_THEORY.md  WORLDOS_V14_V17_PANTHEON_ECONOMY_THEORY.md  WORLDOS_V18_V21_AUTONOMY_CHRONOS_THEORY.md  WORLDOS_V6_EXISTENCE_THEORY.md.resolved  WORLDOS_V8_RECURSIVE_SINGULARITY_THEORY.md.resolved  chronicles_sample.json  deploy.sh  implementation_plan.md  implementation_plan_v7.md.resolved  tmp.md  tmp2.md
backend/: .env.example  check_decisions.php  composer.json  ions = AppModelsAgentDecisionwhere('universe_id', $u-id)  payload.json  phpunit.xml  set_autonomic.php  test-engine.php  test_loom.php  verify_narrative.php  worldos-engine
bloom/: package-lock.json  package.json  tsconfig.tsbuildinfo
deployment/: README.md  backend.prod.Dockerfile  bloom.prod.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  engine.prod.Dockerfile  frontend.prod.Dockerfile
docs/: ARCHITECTURE_COMPARISON_AND_REFACTOR.md  RÀ_SOÁT_TMP.md  SIMULATION_REVIEW.md  TROUBLESHOOTING_RECENT_ERRORS.md  WORLDOS_V22_CIVILIZATION_DYNAMICS_MASTERPLAN.md  WORLDOS_V23_ATTRACTOR.md  WORLDOS_V3_ARCHITECTURE.md  WORLDOS_V4_ARCHITECTURE.md  WORLDOS_V5_ARCHITECTURE.md  WORLDOS_V6.md  WorldOS_Architecture.md  WorldOS_DSL_Spec.md  WorldOS_DSL_Spec_v2.md
engine/: .dockerignore  Cargo.toml  Dockerfile
engine/worldos-grpc/: Cargo.toml  build.rs
engine/worldos-grpc/src/: engine.rs  lib.rs  transport_grpc.rs  transport_http.rs
frontend/: .dockerignore  package-lock.json  package.json  tsconfig.json
narrative-loom/: Dockerfile  (+11 more)
(+1115 files in other folders)
