[package]
name = "worldos-grpc"
version = "0.1.0"
edition = "2021"
description = "WorldOS V6 gRPC server (simulation engine stub)"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
worldos-core = { path = "../worldos-core" }
prost = "0.13"
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "worldos-engine"
path = "src/bin/server.rs"

[build-dependencies]
tonic-build = "0.12"
